globus-scheduler-event-generator (5.10-2+gt6.@distro@) @distro@; urgency=low

  * Better fix for testing on localhost

 -- Globus Toolkit <support@globus.org>  Fri, 09 Jan 2015 08:31:15 -0500

globus-scheduler-event-generator (5.10-1+gt6.@distro@) @distro@; urgency=low

  * Missing -avoid-version (and remove duplicated compiler options)

 -- Globus Toolkit <support@globus.org>  Fri, 09 Jan 2015 08:30:32 -0500

globus-scheduler-event-generator (5.9-1+gt6.@distro@) @distro@; urgency=low

  * Fix globus-scheduler-event-generator script paths

 -- Globus Toolkit <support@globus.org>  Mon, 17 Nov 2014 10:11:51 -0500

globus-scheduler-event-generator (5.8-2+gt6.@distro@) @distro@; urgency=low

  * Manpage format mistake

 -- Globus Toolkit <support@globus.org>  Mon, 03 Nov 2014 13:57:04 -0500

globus-scheduler-event-generator (5.7-2+gt6.@distro@) @distro@; urgency=low

  * Add .txt documentation to filelist

 -- Globus Toolkit <support@globus.org>  Tue, 30 Sep 2014 08:52:00 -0400

globus-scheduler-event-generator (5.7-1+gt6.@distro@) @distro@; urgency=low

  * Use mixed case man page install for all packages
  * Doxygen markup fixes
  * Fix broken globus-scheduler-event-generator-admin script
  * Add documentation for globus-scheduler-event-generator and globus-scheduler-event-generator-admin
  * Quiet some autoconf/automake warnings

 -- Globus Toolkit <support@globus.org>  Tue, 23 Sep 2014 11:10:37 -0400

globus-scheduler-event-generator (5.6-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:28 -0400

globus-scheduler-event-generator (5.5-2+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:39 -0400

globus-scheduler-event-generator (5.5-1+gt6.@distro@) @distro@; urgency=low

  * Incorrect argument order to globus_cond_wait

 -- Globus Toolkit <support@globus.org>  Wed, 06 Aug 2014 13:39:17 -0400
