@@ -1,9 +1,9 @@
 Name: globus-scheduler-event-generator
 Maintainer: Mattias Ellert <mattias.ellert@fysast.uu.se>
-Source: http://www.globus.org/ftppub/gt6/packages/globus_scheduler_event_generator-5.10.tar.gz
+Source: http://toolkit.globus.org/ftppub/gt6/packages/globus_scheduler_event_generator-5.11.tar.gz
 
 
-Upstream-Authors: The Globus Alliance - http://www.globus.org/
+Upstream-Authors: The Globus Alliance - http://toolkit.globus.org/
 
 Files: *
 Copyright: Copyright 1999-2010 University of Chicago
