@@ -1,3 +1,10 @@
+globus-scheduler-event-generator (5.11-1+gt6.@distro@) @distro@; urgency=low
+
+  * - Remove dead code
+  * - Depend on lsb-core when possible
+
+ -- Globus Toolkit <support@globus.org>  Mon, 06 Apr 2015 14:40:58 -0400
+
 globus-scheduler-event-generator (5.10-2+gt6.@distro@) @distro@; urgency=low
 
   * Better fix for testing on localhost
